Fix wrong color when editing thread title

--- a/themes/Aurora/style.css
+++ b/themes/Aurora/style.css
@@ -750,7 +750,7 @@ tr:last-child td {
 }
 
 #editthread:focus {
-    outline: #9c9cff 1px solid;
+    border: var(--c-gradient-bottom) 1px solid;
     text-decoration: none;
 }
 .thread,
